# hackathon-todo

./: .env.example  .gitignore  Hackathon II - Todo Spec-Driven Development.md  Procfile  README.md  pyproject.toml  railway.json
.claude/: SKILLS_AND_AGENTS_GUIDE.md
.claude/agents/: github-workflow-agent.md  nextjs-expert-agent.md  orchestrator-agent.md  project-structure-agent.md  storage-handler-agent.md  task-manager-agent.md  ui-controller-agent.md  ui-ux-design-agent.md
.specify/memory/: constitution.md
docs/: PHASE-I-TESTING-GUIDE.md  PHASE-II-TESTING-GUIDE.md  PHASE-III-TESTING-GUIDE.md
frontend/: .env.example  README.md  middleware.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/signin/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: auth-form.tsx  footer.tsx  header.tsx  loading.tsx  task-card.tsx  task-form.tsx  task-list.tsx
frontend/lib/: api-client.ts  auth-client.ts
scripts/: migrate_tasks_table.sql  run_migration.py
specs/001-multi-agent-architecture/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-multi-agent-architecture/checklists/: requirements.md
specs/001-multi-agent-architecture/contracts/: agent-contracts.md
specs/002-fullstack-web-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fullstack-web-app/checklists/: requirements.md
specs/002-fullstack-web-app/contracts/: openapi.yaml
specs/003-ai-chatbot-mcp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ai-chatbot-mcp/checklists/: requirements.md
specs/003-ai-chatbot-mcp/contracts/: chat-api.yaml  mcp-tools.yaml
src/: README.md  __init__.py  app.py  config.py  db.py
src/adapters/: __init__.py  console.py
src/agents/: __init__.py  base.py  orchestrator.py  storage_handler.py  task_manager.py  ui_controller.py
src/auth/: __init__.py  dependencies.py  jwt.py  password.py
src/backends/: __init__.py  base.py  memory.py  postgres.py
src/interfaces/: __init__.py  api.py
src/mcp_server/: __init__.py  agent.py  auth.py  backend_client.py  memory.py  nlp.py  prompts.py  server.py  tools.py
src/models/: __init__.py  chat.py  exceptions.py  messages.py  requests.py  tasks.py  user.py
tests/: __init__.py  conftest.py
tests/contract/: __init__.py
tests/integration/: __init__.py  test_orchestrator.py
tests/unit/: __init__.py  test_base_agent.py  test_exceptions.py  test_messages.py  test_nlp.py  test_storage_backend.py  test_storage_handler_agent.py  test_task_manager_agent.py  test_tasks.py
